<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home"/>
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_stats"
        android:title="Stats"/>
    <item
        android:id="@+id/nav_reminder"
        android:icon="@drawable/ic_reminder"
        android:title="Reminder"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile"/>
</menu>
